--- a/dataPreprocessing_Statewide.Rmd
+++ b/dataPreprocessing_Statewide.Rmd
@@ -460,3 +460,5 @@ write.csv(riverStations, paste('processedStationData/RegionalResultsRiverine_',
 ```
 
 
+
+Contact Emma Jones (emma.jones@deq.virginia.gov) if you have any questions about this script.
